<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/centerContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_subHeaderWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subHeaderPassword"
            android:textSize="14sp"
            android:fontFamily="@font/manrope_reguler"
            android:textColor="@color/neutral_50"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--Field-->
        <GridLayout
            android:id="@+id/gl_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_subHeaderWallet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:columnCount="4"
            android:rowCount="1">

            <ImageView
                android:id="@+id/firstPassword"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/password_not_entered"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/password"/>

            <ImageView
                android:id="@+id/secondPassword"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/password_not_entered"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/password"/>

            <ImageView
                android:id="@+id/thirdPassword"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/password_not_entered"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/password"/>

            <ImageView
                android:id="@+id/fourthPassword"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/password_not_entered"
                android:contentDescription="@string/password"/>

        </GridLayout>

        <GridLayout
            android:id="@+id/gl_numpad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gl_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="42dp"
            android:columnCount="3"
            android:rowCount="4">

            <TextView
                android:id="@+id/number1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:fontFamily="@font/manrope_semibold"
                android:textSize="24sp"
                android:textColor="@color/primary_70"
                android:textAlignment="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"/>

            <TextView
                android:id="@+id/number2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:fontFamily="@font/manrope_semibold"
                android:textSize="24sp"
                android:textColor="@color/primary_70"
                android:textAlignment="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"/>

            <TextView
                android:id="@+id/number3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:fontFamily="@font/manrope_semibold"
                android:textSize="24sp"
                android:textColor="@color/primary_70"
                android:textAlignment="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"/>

            <TextView
                android:id="@+id/number4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:fontFamily="@font/manrope_semibold"
                android:textSize="24sp"
                android:textColor="@color/primary_70"
                android:textAlignment="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"/>

            <TextView
                android:id="@+id/number5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:fontFamily="@font/manrope_semibold"
                android:textSize="24sp"
                android:textColor="@color/primary_70"
                android:textAlignment="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"/>

            <TextView
                android:id="@+id/number6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:fontFamily="@font/manrope_semibold"
                android:textSize="24sp"
                android:textColor="@color/primary_70"
                android:textAlignment="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"/>

            <TextView
                android:id="@+id/number7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:fontFamily="@font/manrope_semibold"
                android:textSize="24sp"
                android:textColor="@color/primary_70"
                android:textAlignment="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"/>

            <TextView
                android:id="@+id/number8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:fontFamily="@font/manrope_semibold"
                android:textSize="24sp"
                android:textColor="@color/primary_70"
                android:textAlignment="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"/>

            <TextView
                android:id="@+id/number9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:fontFamily="@font/manrope_semibold"
                android:textSize="24sp"
                android:textColor="@color/primary_70"
                android:textAlignment="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"/>

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/backspace"
                android:contentDescription="@string/delete"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"
                app:tint="@color/primary_70" />


            <TextView
                android:id="@+id/number0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:fontFamily="@font/manrope_semibold"
                android:textSize="24sp"
                android:textColor="@color/primary_70"
                android:textAlignment="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"/>

            <ImageView
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/done"
                android:contentDescription="@string/done"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingVertical="14dp"
                app:tint="@color/primary_70" />

        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>